@@ -144,6 +144,7 @@ Pod::Weaver::Plugin::Transformer = 0
 Pod::Weaver::Section::Contributors = 0.008
 Pod::Weaver::Section::Legal = 4.011
 Pod::Weaver::Section::GenerateSection = 0
+Pod::Weaver::Section::AllowOverride = 0
 
 [Prereqs / podweaver plugin bundle (indirect)]
 -phase = runtime
